--- a/Demo/plugin-example/build.gradle
+++ b/Demo/plugin-example/build.gradle
@@ -36,5 +36,5 @@ dependencies {
     implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
     implementation "androidx.core:core-ktx:" + project.ext.kotlinCoreLibVersion
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "io.github.acoustic-analytics:acoustic-mobile-push-android-sdk:+"
+    implementation "io.github.go-acoustic:acoustic-mobile-push-android-sdk:+"
 }
