--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -72,5 +72,8 @@ allprojects {
         hamcrestVersion = "1.3"
         espressoVersion = "3.4.0"
         mockitoAndroid = "5.5.0"
+
+        // This version supports 21 minimal
+        securityCryptoVersion = "1.1.0-alpha06"
     }
 }
