--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -76,5 +76,8 @@ allprojects {
 
         // This version supports 21 minimal
         securityCryptoVersion = "1.1.0-alpha06"
+        
+        // Current version of sdk
+        mceVersion = "3.10.0"
     }
 }
